Implemented '/devices' endpoint
